Fix small css visibility issue

--- a/cardDatabase/static/css/pack_opening_mobile.css
+++ b/cardDatabase/static/css/pack_opening_mobile.css
@@ -9,6 +9,6 @@
 .actions-wrapper {
   flex-direction: column;
   width: max-content;
-  margin: 0 auto;
+  margin: 0 auto 100px auto;
   gap: 15px;
 }
